force-app/main/default/objects/AC_Scheduled_Notice__c/AC_Scheduled_Notice__c.object-meta.xml
<CustomObject>
    <label>AC Scheduled Notice</label>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>Scheduled Notice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>