force-app/main/default/objects/AC_Scheduled_Notice__c/fields/Assigned_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Appointment</label>
    <referenceTo>AC_Assigned_Appointment__c</referenceTo>
    <relationshipName>Scheduled_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>