force-app/main/default/objects/AC_Scheduled_Notice__c/fields/Notification_Method__c.field-meta.xml
<CustomField>
    <fullName>Notification_Method__c</fullName>
    <label>Notification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>