force-app/main/default/objects/AC_Scheduled_Notice__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>AC_Technician__c</referenceTo>
    <relationshipName>Scheduled_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>